--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -63,16 +63,14 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Ville, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Ville, new { htmlAttributes = new { @class = "form-control" } })
+    <!-- Faire comboBox -->
+    <div class="dropdown">
+        @Html.LabelFor(model => model.Ville, htmlAttributes: new { @class = "btn btn-secondary dropdown-toggle" })
+        <div class="dropdown-menu">
+            @Html.EditorFor(model => model.Ville, new { htmlAttributes = new { @class = "dropdown-item" } })
             @Html.ValidationMessageFor(model => model.Ville, "", new { @class = "text-danger" })
         </div>
     </div>
-
-    @Html.DropDownListFor(model => model.Ville,
-    new SelectList(Villes, "ColorId", "Name"))
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
