--- a/Views/Question/Question.cshtml
+++ b/Views/Question/Question.cshtml
@@ -12,11 +12,11 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>QuestionViewModel</h4>
+        @*<h4>QuestionViewModel</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @ViewBag.VerbInfinitif
+        @ViewBag.VerbInfinitif <!-- Guru -->
 
         <div class="form-group">
             @Html.LabelFor(model => model.Preterit, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -36,7 +36,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Valider" class="btn btn-default" />
             </div>
         </div>
     </div>
