--- a/Views/Question/Question.cshtml
+++ b/Views/Question/Question.cshtml
@@ -17,6 +17,10 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <h4>@ViewBag.verbe</h4>
+    <h4>@ViewBag.answer</h4>
+
+    <h4>@ViewBag.part</h4>
+    <h4>@ViewBag.score</h4>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Preterit, htmlAttributes: new { @class = "control-label col-md-2" })
