--- a/Content/register.css
+++ b/Content/register.css
@@ -2,6 +2,18 @@
     padding-left: 14%;
 }
 
+.niveau {
+    padding-right: 16%;
+}
+
+.ville {
+    padding-right: 14%;
+}
+
+.bouton {
+    padding-right: 17.5%;
+}
+
 .viewBagErreurInscription {
     font-size: 20px;
     color: red;
