--- a/Content/question.css
+++ b/Content/question.css
@@ -1,9 +1,32 @@
-﻿h1 {
-    font-size: 36px
+﻿#boutonQuestion {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 100%;
+}
+
+#preterit {
+    margin-left: 5%;
+}
+
+#participePasse {
+    margin-left: 5%;
+}
+
+.aligner {
+    display: flex;
+    text-align: center;
+    margin-left: 15%;
+}
+
+h1 {
+    font-size: 36px;
 }
 
 h2 {
-    font-size: 20px
+    font-size: 20px;
 }
 
 body {
