--- a/Views/Question/Question.cshtml
+++ b/Views/Question/Question.cshtml
@@ -28,7 +28,7 @@
 
 @using (Html.BeginForm())
 {
-    //@Html.AntiForgeryToken()    //mettre exception
+    @Html.AntiForgeryToken()    //mettre exception
 
     <div class="form-horizontal">
         <hr />
