Ajout du try catch pour question.cshtml

--- a/Views/Question/Question.cshtml
+++ b/Views/Question/Question.cshtml
@@ -28,7 +28,14 @@
 
 @using (Html.BeginForm())
 {
+    try
+    {
     @Html.AntiForgeryToken()    //mettre exception
+    }
+    catch
+    {
+        //rien
+    }
 
     <div class="form-horizontal">
         <hr />
