Ajout d'un fichier audio Mortal Kombat (tututu tu tu tu)

--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -53,6 +53,11 @@
     else
     {
         <h1>ENGLISH BATTLE !!! TUTUTUTU TU TU TU TU !</h1>
+
+        @*<audio controls>
+            <source src="~/Content/mp3/MKThemeSong.mp3" type="audio/mpeg" autoplay="true">
+        </audio>*@
+
     }
 }
 
@@ -61,9 +66,9 @@
     </div>*@
 
 <!-- Hall of Fame -->
-</br>
+        </br>
 <h2>-- Hall of Fame --</h2>
-</br>
+        </br>
 @using EnglishBattle.data.Services
 @using EnglishBattle.data
 
